--- a/aftman.toml
+++ b/aftman.toml
@@ -5,4 +5,5 @@
 [tools]
 rojo = "rojo-rbx/rojo@7.4.1"
 zap = "red-blox/zap@0.6.3"
+wally-package-types = "JohnnyMorganz/wally-package-types@1.3.1"
 # rojo = "rojo-rbx/rojo@6.2.0"
