--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 
 /Packages
 /sourcemap.json
+Packages/Fusion.lua
+Packages/Matter.lua
+Packages/ParallelWorker.lua
+Packages/PartCache.lua
+Packages/Spring.lua
+sourcemap.json
