--- a/wally.toml
+++ b/wally.toml
@@ -9,6 +9,7 @@ Matter = "evaera/matter@0.7.0"
 Fusion = "elttob/fusion@0.2.0"
 ParallelWorker = "maximumadhd/parallel-worker@1.0.0"
 TableUtil = "sleitnick/table-util@1.2.1"
+Immut = "solarhorizon/immut@0.4.4"
 Loader = "sleitnick/loader@2.0.0"
 Spring = "murtlatif/spring@0.1.2"
 PartCache = "aulkhami/partcache@4.0.2"
