--- a/wally.toml
+++ b/wally.toml
@@ -14,3 +14,4 @@ Loader = "sleitnick/loader@2.0.0"
 Spring = "murtlatif/spring@0.1.2"
 PartCache = "aulkhami/partcache@4.0.2"
 Plasma = "matter-ecs/plasma@0.4.4"
+Rewire = "sayhisam1/rewire@0.3.0"
