--- a/wally.toml
+++ b/wally.toml
@@ -9,7 +9,7 @@ Matter = "evaera/matter@0.7.0"
 Fusion = "elttob/fusion@0.2.0"
 Reflex = "littensy/reflex@4.3.1"
 ParallelWorker = "maximumadhd/parallel-worker@1.0.0"
-TableUtil = "sleitnick/table-util@1.2.1"
+Sift = "csqrl/sift@0.0.8"
 Immut = "solarhorizon/immut@0.4.4"
 Loader = "sleitnick/loader@2.0.0"
 Spring = "murtlatif/spring@0.1.2"
