--- a/wally.toml
+++ b/wally.toml
@@ -9,6 +9,7 @@ Matter = "evaera/matter@0.7.0"
 Fusion = "elttob/fusion@0.2.0"
 Reflex = "littensy/reflex@4.3.1"
 ParallelWorker = "maximumadhd/parallel-worker@1.0.0"
+Squash = "data-oriented-house/squash@1.1.6"
 Sift = "csqrl/sift@0.0.8"
 Immut = "solarhorizon/immut@0.4.4"
 Loader = "sleitnick/loader@2.0.0"
