--- a/aftman.toml
+++ b/aftman.toml
@@ -6,4 +6,5 @@
 rojo = "rojo-rbx/rojo@7.4.1"
 zap = "red-blox/zap@0.6.3"
 wally-package-types = "JohnnyMorganz/wally-package-types@1.3.1"
+lune = "lune-org/lune@0.8.3"
 # rojo = "rojo-rbx/rojo@6.2.0"
