--- a/default.project.json
+++ b/default.project.json
@@ -15,6 +15,10 @@
       },
       "Types": {
         "$path": "src/types"
+      },
+
+      "MatterRemote": {
+        "$className": "RemoteEvent"
       }
     },
 
