--- a/wally.toml
+++ b/wally.toml
@@ -12,6 +12,8 @@ ParallelWorker = "maximumadhd/parallel-worker@1.0.0"
 Squash = "data-oriented-house/squash@1.1.6"
 Sift = "csqrl/sift@0.0.8"
 Immut = "solarhorizon/immut@0.4.4"
+Signal = "red-blox/signal@^2.0.0"
+Future = "red-blox/future@^1.0.0"
 Loader = "sleitnick/loader@2.0.0"
 Spring = "murtlatif/spring@0.1.2"
 PartCache = "aulkhami/partcache@4.0.2"
