--- a/wally.toml
+++ b/wally.toml
@@ -5,7 +5,7 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-Matter = "evaera/matter@0.7.0"
+Matter = "matter-ecs/matter@0.8.2"
 Fusion = "elttob/fusion@0.2.0"
 Reflex = "littensy/reflex@4.3.1"
 ParallelWorker = "maximumadhd/parallel-worker@1.0.0"
